fix: fix popover content is overlapped

--- a/src/components/Layout/index.module.scss
+++ b/src/components/Layout/index.module.scss
@@ -5,6 +5,7 @@
 
   .header {
     height: 46px;
+    z-index: 1;
   }
 
   .content {
